--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "lib-flexible": "^0.3.2",
     "vant": "^2.12.14",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
@@ -21,6 +22,7 @@
     "babel-plugin-import": "^1.13.3",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "postcss-pxtorem": "^5.1.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
