--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-plugin-import": "^1.13.3",
+    "eslint": "^7.24.0",
+    "eslint-plugin-vue": "^7.9.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "postcss-pxtorem": "^5.1.1",
