--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "js-md5": "^0.7.3",
     "lib-flexible": "^0.3.2",
     "vant": "^2.12.14",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue2-verify": "^1.1.5",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -26,6 +28,19 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "postcss-pxtorem": "^5.1.1",
-    "vue-template-compiler": "^2.6.11"
-  }
+    "vue-template-compiler": "^2.6.11",
+    "webpack-cli": "^4.6.0"
+  },
+  "description": "## Project setup ``` npm install ```",
+  "main": ".postcssrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lingoufan/mall-h5.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/lingoufan/mall-h5/issues"
+  },
+  "homepage": "https://github.com/lingoufan/mall-h5#readme"
 }
